crates/core/src/snapshots/marzano_core__test_notebooks__tests__changing_size.snap
---
source: crates/core/src/test_notebooks.rs
expression: rewrite.rewritten.content
---
{
  "cells": [
    {
      "cell_type": "code",
      "execution_count": null,
      "id": "5e3cb542-933d-4bf3-a82b-d9d6395a7832",
      "metadata": {
        "tags": []
      },
      "outputs": [],
      "source": ["THIS_IS_MUCH_MUCH_MUCH_MUCH_MUCH_MUCH_LONGER(4)\nTHIS_IS_MUCH_MUCH_MUCH_MUCH_MUCH_MUCH_LONGER(\"3\")\nTHIS_IS_MUCH_MUCH_MUCH_MUCH_MUCH_MUCH_LONGER(5)"]
    }
  ],
  "metadata": {
    "kernelspec": {
      "display_name": "conda210",
      "language": "python",
      "name": "conda210"
    },
    "language_info": {
      "codemirror_mode": {
        "name": "ipython",
        "version": 3
      },
      "file_extension": ".py",
      "mimetype": "text/x-python",
      "name": "python",
      "nbconvert_exporter": "python",
      "pygments_lexer": "ipython3",
      "version": "3.9.16"
    }
  },
  "nbformat": 4,
  "nbformat_minor": 5
}
