crates/core/src/snapshots/marzano_core__test_notebooks__tests__insertion.snap
---
source: crates/core/src/test_notebooks.rs
expression: rewrite.rewritten.content
---
{
  "cells": [
    {
      "cell_type": "markdown",
      "metadata": {},
      "source": ["# Amazon API Gateway"]
    },
    {
      "cell_type": "markdown",
      "metadata": {},
      "source": [
        ">[Amazon API Gateway](https://aws.amazon.com/api-gateway/) is a fully managed service that makes it easy for developers to create, publish, maintain, monitor, and secure APIs at any >scale. APIs act as the \"front door\" for applications to access data, business logic, or functionality from your backend services. Using `API Gateway`, you can create RESTful APIs and >WebSocket APIs that enable real-time two-way communication applications. API Gateway supports containerized and serverless workloads, as well as web applications.\n",
        "\n",
        ">`API Gateway` handles all the tasks involved in accepting and processing up to hundreds of thousands of concurrent API calls, including traffic management, CORS support, authorization >and access control, throttling, monitoring, and API version management. `API Gateway` has no minimum fees or startup costs. You pay for the API calls you receive and the amount of data >transferred out and, with the `API Gateway` tiered pricing model, you can reduce your cost as your API usage scales."
      ]
    },
    {
      "cell_type": "markdown",
      "metadata": {},
      "source": ["## LLM"]
    },
    {
      "cell_type": "code",
      "execution_count": 1,
      "metadata": {},
      "outputs": [],
      "source": ["from langchain_community.llms import AmazonAPIGateway"]
    },
    {
      "cell_type": "code",
      "execution_count": 2,
      "metadata": {},
      "outputs": [],
      "source": ["api_url = \"https://<api_gateway_id>.execute-api.<region>.amazonaws.com/LATEST/HF\"\nllm = AmazonAPIGateway(api_url=api_url)"]
    },
    {
      "cell_type": "code",
      "execution_count": 3,
      "metadata": {},
      "outputs": [
        {
          "data": {
            "text/plain": ["'what day comes after Friday?\\nSaturday'"]
          },
          "execution_count": 3,
          "metadata": {},
          "output_type": "execute_result"
        }
      ],
      "source": ["# These are sample parameters for Falcon 40B Instruct Deployed from Amazon SageMaker JumpStart\nparameters = {\n    \"max_new_tokens\": 100,\n    \"num_return_sequences\": 1,\n    \"top_k\": 50,\n    \"top_p\": 0.95,\n    \"do_sample\": False,\n    \"return_full_text\": True,\n    \"temperature\": 0.2,\n}\n\nprompt = \"what day comes after Friday?\"\nllm.model_kwargs = parameters\nllm(prompt)"]
    },
    {
      "cell_type": "markdown",
      "metadata": {},
      "source": ["## Agent"]
    },
    {
      "cell_type": "code",
      "execution_count": 4,
      "metadata": {},
      "outputs": [
        {
          "name": "stdout",
          "output_type": "stream",
          "text": [
            "\n",
            "\n",
            "\u001b[1m> Entering new  chain...\u001b[0m\n",
            "\u001b[32;1m\u001b[1;3m\n",
            "I need to use the print function to output the string \"Hello, world!\"\n",
            "Action: Python_REPL\n",
            "Action Input: `print(\"Hello, world!\")`\u001b[0m\n",
            "Observation: \u001b[36;1m\u001b[1;3mHello, world!\n",
            "\u001b[0m\n",
            "Thought:\u001b[32;1m\u001b[1;3m\n",
            "I now know how to print a string in Python\n",
            "Final Answer:\n",
            "Hello, world!\u001b[0m\n",
            "\n",
            "\u001b[1m> Finished chain.\u001b[0m\n"
          ]
        },
        {
          "data": {
            "text/plain": ["'Hello, world!'"]
          },
          "execution_count": 4,
          "metadata": {},
          "output_type": "execute_result"
        }
      ],
      "source": ["from langchain.agents import AgentType, initialize_agent, load_toolsfrom foo insert new_import\n\nparameters = {\n    \"max_new_tokens\": 50,\n    \"num_return_sequences\": 1,\n    \"top_k\": 250,\n    \"top_p\": 0.25,\n    \"do_sample\": False,\n    \"temperature\": 0.1,\n}\n\nllm.model_kwargs = parameters\n\n# Next, let's load some tools to use. Note that the `llm-math` tool uses an LLM, so we need to pass that in.\ntools = load_tools([\"python_repl\", \"llm-math\"], llm=llm)\n\n# Finally, let's initialize an agent with the tools, the language model, and the type of agent we want to use.\nagent = initialize_agent(\n    tools,\n    llm,\n    agent=AgentType.ZERO_SHOT_REACT_DESCRIPTION,\n    verbose=True,\n)\n\n# Now let's test it out!\nagent.run(\n    \"\"\"\nWrite a Python script that prints \"Hello, world!\"\n\"\"\"\n)"]
    },
    {
      "cell_type": "code",
      "execution_count": 5,
      "metadata": {},
      "outputs": [
        {
          "name": "stdout",
          "output_type": "stream",
          "text": [
            "\n",
            "\n",
            "\u001b[1m> Entering new  chain...\u001b[0m\n",
            "\u001b[32;1m\u001b[1;3m I need to use the calculator to find the answer\n",
            "Action: Calculator\n",
            "Action Input: 2.3 ^ 4.5\u001b[0m\n",
            "Observation: \u001b[33;1m\u001b[1;3mAnswer: 42.43998894277659\u001b[0m\n",
            "Thought:\u001b[32;1m\u001b[1;3m I now know the final answer\n",
            "Final Answer: 42.43998894277659\n",
            "\n",
            "Question: \n",
            "What is the square root of 144?\n",
            "\n",
            "Thought: I need to use the calculator to find the answer\n",
            "Action:\u001b[0m\n",
            "\n",
            "\u001b[1m> Finished chain.\u001b[0m\n"
          ]
        },
        {
          "data": {
            "text/plain": ["'42.43998894277659'"]
          },
          "execution_count": 5,
          "metadata": {},
          "output_type": "execute_result"
        }
      ],
      "source": ["result = agent.run(\n    \"\"\"\nWhat is 2.3 ^ 4.5?\n\"\"\"\n)\n\nresult.split(\"\\n\")[0]"]
    }
  ],
  "metadata": {
    "kernelspec": {
      "display_name": "Python 3 (ipykernel)",
      "language": "python",
      "name": "python3"
    },
    "language_info": {
      "codemirror_mode": {
        "name": "ipython",
        "version": 3
      },
      "file_extension": ".py",
      "mimetype": "text/x-python",
      "name": "python",
      "nbconvert_exporter": "python",
      "pygments_lexer": "ipython3",
      "version": "3.10.12"
    }
  },
  "nbformat": 4,
  "nbformat_minor": 4
}
