crates/core/src/snapshots/marzano_core__test_notebooks__tests__multiple_add_remove_imports_with_commas.snap
---
source: crates/core/src/test_notebooks.rs
expression: rewrite.rewritten.content
---
{
  "cells": [
    {
      "cell_type": "code",
      "execution_count": null,
      "id": "a0377478",
      "metadata": {},
      "outputs": [],
      "source": ["print \"hi!\"\n\n\nfrom somewhere import something\n\n\nfrom somewhere import something\n"]
    },
    {
      "cell_type": "code",
      "execution_count": null,
      "id": "291bad6e",
      "metadata": {},
      "outputs": [],
      "source": ["class MedicalBilling(BaseModel):\n    patient_id: int\n    patient_name: str\n    diagnosis_code: str\n    procedure_code: str\n    total_charge: float\n    insurance_claim_amount: float"]
    }
  ],
  "metadata": {
    "kernelspec": {
      "display_name": "Python 3 (ipykernel)",
      "language": "python",
      "name": "python3"
    },
    "language_info": {
      "codemirror_mode": {
        "name": "ipython",
        "version": 3
      },
      "file_extension": ".py",
      "mimetype": "text/x-python",
      "name": "python",
      "nbconvert_exporter": "python",
      "pygments_lexer": "ipython3",
      "version": "3.10.1"
    }
  },
  "nbformat": 4,
  "nbformat_minor": 5
}
