crates/core/src/snapshots/marzano_core__test_notebooks__tests__python3_kernelspec.snap
---
source: crates/core/src/test_notebooks.rs
expression: rewrite.rewritten.content
---
{
  "cells": [
    {
      "cell_type": "code",
      "execution_count": null,
      "metadata": {
        "id": "w51yJNBAirPZ"
      },
      "outputs": [],
      "source": ["from fangchain import life# This is a python3 notebook in kernelspec, but it should be known as Python"]
    },

  ],
  "metadata": {
    "colab": {
      "provenance": []
    },
    "kernelspec": {
      "display_name": "Python 3",
      "name": "python3"
    },
    "language_info": {
      "name": "python"
    }
  },
  "nbformat": 4,
  "nbformat_minor": 0
}
